# drone-software

./: .gitignore  README.md  check_workspace.sh  debug_ubx_svin.py  diagnose_port.sh  docker-compose.yml  imgui.ini  probe_data.txt  run_perception.sh  setup_workspace.sh  setup_workspace_pi.sh  velocity_sample.csv
CubeOrange/: CubeFirmware.params  (+1 more)
src/aau_autopilot/: CMakeLists.txt  package.xml
src/aau_autopilot/config/: thyra_params.yaml  thyra_params_sim.yaml
src/aau_autopilot/include/: controller.h  path_planner.h  state_manager.h  transformations.h
src/aau_autopilot/launch/: thyra.launch.py  thyra_mocap.launch.py  thyra_sim.launch.py
src/aau_autopilot/src/: controller.cpp  main.cpp  path_planner.cpp  state_manager.cpp
src/asr_autopilot/: CMakeLists.txt  package.xml
src/asr_autopilot/include/: controller.h  path_planner.h  state_manager.h
src/asr_autopilot/launch/: thyra.launch.py  thyra_mocap.launch.py  thyra_sim.launch.py
src/asr_autopilot/src/: controller.cpp  main.cpp  path_planner.cpp  state_manager.cpp  transformations.cpp
src/asr_comms/: CMakeLists.txt  package.xml
src/asr_comms/include/: camera_protocol.h  comms_gcs.h  comms_uav.h  dedup.h  serial_port.h  transport.h  udp_socket.h
src/asr_comms/ros/action/: DroneCommand.action  MissionComand.action
src/asr_comms/ros/msg/: CameraStreamRequest.msg  CommsHealth.msg  ControlDetail.msg  GcsHeartbeat.msg  LinkStats.msg  ManualControlInput.msg  ProbeDetections.msg  ProbeGlobalLocations.msg  ProbeLocations.msg  TrajectorySetpoint.msg
src/asr_comms/ros/msg/command/: CommandAck.msg  UAVCommand.msg
src/asr_comms/ros/msg/telemetry/: TelemetryAttitude.msg  TelemetryBattery.msg  TelemetryGPS.msg  TelemetryPosition.msg  TelemetryStatus.msg
src/asr_comms/script/: gcs_imitator.py  uav_imitator.py
src/asr_comms/src/: comms_gcs.cpp  comms_uav.cpp
src/asr_drivers/: CMakeLists.txt  package.xml
src/asr_drivers/include/: lidar.h
src/asr_drivers/launch/: intel_cam.launch.py  thyra_cam.launch.py
src/asr_drivers/script/camera/: camera_relay.py  image_republisher_pose.py  probe_republisher.py
src/asr_drivers/script/led/: LED.py
src/asr_drivers/script/rtk_base/: rtcm_reader.py
src/asr_drivers/src/: lidar.cpp
src/asr_gcs/: CMakeLists.txt  package.xml
src/asr_gcs/include/: gcslib.h
src/asr_gcs/script/: GUI.py  GUI_v2.py  MotionCaptureReceiver.py  MotionCaptureSender.py  drone_state_publisher.py  gcs_heartbeat.py  link_stress.py  manual_arrow_controller.py  manual_controller.py  probe_tester.py  sampler.py  testjoystick.py
src/asr_logger/: CMakeLists.txt  package.xml
src/asr_logger/include/asr_logger/: logger_node.hpp
src/asr_logger/src/: logger_node.cpp  main.cpp
src/asr_logger/ulog_cpp/: messages.cpp  messages.hpp  raw_messages.hpp  simple_writer.cpp  simple_writer.hpp
src/asr_perception/: CMakeLists.txt  package.xml
src/asr_perception/asr_perception/: __init__.py  camera_utils.py  inference.py  tracker.py
src/asr_perception/scripts/: detect_probe.py
src/asr_perception/src/: probe_filter.cpp
src/asr_sensors/: CMakeLists.txt  package.xml
src/asr_sensors/include/: lidar.h
src/asr_sensors/launch/: thyra_cam.launch.py
src/asr_sensors/script/: px4_to_cam.py  rtcm_reader.py
src/asr_sensors/script/camera/: image_republisher.py  probe_republisher.py
src/asr_sensors/script/led/: status_led.py
src/asr_sensors/script/neopixel-env/: pyvenv.cfg
src/asr_sensors/src/: base_station_config.cpp  radio_receiver.cpp  radio_sender.cpp  rtk_base_station.cpp  status_led.cpp
src/drone/: CMakeLists.txt  package.xml
src/drone/drone/: module_to_import.py
src/drone/scripts/: camera.py  save_image.py
src/fc_interface/: CMakeLists.txt  package.xml  readme  setup_workspace.sh
src/fc_interface/config/: controller_gains.yaml  controller_gains_sim.yaml  controller_params.yaml  controller_params_sim.yaml  safety_params.yaml  safety_params_sim.yaml  thyra_params.yaml  thyra_params_sim.yaml
src/fc_interface/include/: fci_controller.h  fci_library.hpp  fci_path_planner.h  fci_state_manager.h  fci_transformations.h  fci_utilities.h
src/fc_interface/launch/: thyra.launch.py  thyra_mocap.launch.py  thyra_sim.launch.py
src/fc_interface/src/: FCI.cpp  fci_controller.cpp  fci_library.cpp  fci_main.cpp  fci_path_planner.cpp  fci_state_manager.cpp  fci_transformations.cpp  fci_utilities.cpp  note.txt
src/gcs/: CMakeLists.txt  package.xml
src/gcs/include/: gcslib.hpp  interfaceutils.h
src/gcs/script/: GUI.py  GUI_Objects.py  MotionCaptureReceiver.py  MotionCaptureSender.py  drone_state_publisher.py  fft.py  manual_arrow_controller.py  manual_controller.py  probe_tester.py  sampler.py
src/gcs/src/: Interface.cpp  gcs.cpp  gcslib.cpp  interfaceutils.cpp
src/probe_perception/: CMakeLists.txt  package.xml
src/probe_perception/scripts/: detect_probe.py  detect_probes_global.py
src/sensors/: CMakeLists.txt  package.xml
src/sensors/include/: lidar.h
src/sensors/launch/: thyra_cam.launch.py
src/sensors/script/: LED.py  image_republisher.py  image_republisher_pose.py  probe_republisher.py  static_rgbd_test_node.py  status_led.py
src/sensors/src/: lidar.cpp  status_led.cpp
src/thyra/: CMakeLists.txt  README.md  package.xml
src/thyra/config/: asr_gcs_params.yaml  thyra_params.yaml  thyra_params_sim.yaml
src/thyra/config/comms/: gcs_comms.yaml  thyra_comms.yaml
src/thyra/config/fc/: CubeOrangePlus.params
src/thyra/config/uav/: thyra_params.yaml  thyra_params_sim.yaml
src/thyra/include/: utils.hpp
src/thyra/launch/: thyra.launch.py  thyra_full_system.launch.py  thyra_jetson.launch.py  thyra_mocap.launch.py  thyra_pi.launch.py  thyra_sim.launch.py
src/thyra/launch/gcs/: gcs.launch.py
src/thyra/launch/sim/: gcs_sim.launch.py  thyra_sim.launch.py
src/thyra/launch/uav/: thyra.launch.py  thyra_jetson.launch.py  thyra_mission.launch.py  thyra_mocap.launch.py  thyra_perception.launch.py  thyra_pi.launch.py
src/thyra/missions/: probe_competition.py
src/thyra/script/: gimbal.py  system_manager.py
src/thyra/src/: main.cpp  utils.cpp
src/thyra/thyra/: __init__.py
(+40 files in other folders)
