<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asr_autopilot</name>
  <version>0.0.0</version>
  <description>ASR autonomous flight control and navigation system</description>
  <maintainer email="mdaro22@student.aau.dk">drone</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
<depend>asr_comms</depend>
  <depend>px4_msgs</depend>
  <depend>serial_driver</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
