<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asr_drivers</name>
  <version>0.0.0</version>
  <description>ASR sensor drivers and hardware interfaces</description>
  <maintainer email="mdaro22@student.aau.dk">drone</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>std_msgs</depend>
  <depend>serial_driver</depend>
  <depend>diagnostic_msgs</depend>
  <depend>asr_comms</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>