<?xml version="1.0"?>
<package format="3">
  <name>gcs</name>
  <version>0.0.1</version>
  <description>ROS 2 package for HMI, including a GUI and an Activity display</description>

  <maintainer email="mdaro22@student.aau.dk">Magnus</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS 2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>tinyxml</depend>
  <depend>interfaces</depend>

  <!-- System dependencies -->
  <exec_depend>libglfw3</exec_depend>
  <exec_depend>libopengl0</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
