cmake_minimum_required(VERSION 3.5)
project(thyra)

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

# Install Python modules
ament_python_install_package(${PROJECT_NAME})

# Install launch files
install(DIRECTORY launch/
  DESTINATION share/${PROJECT_NAME}/launch
  FILES_MATCHING PATTERN "*.py"
)

# Install config files
install(DIRECTORY config/
  DESTINATION share/${PROJECT_NAME}/config
  FILES_MATCHING PATTERN "*.yaml"
)

# Install mission scripts
install(DIRECTORY missions/
  DESTINATION lib/${PROJECT_NAME}/missions
  USE_SOURCE_PERMISSIONS
  FILES_MATCHING PATTERN "*.py"
)

ament_package()
