<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thyra</name>
  <version>0.0.1</version>
  <description>Thyra drone-specific configuration, parameters, and mission logic</description>
  <maintainer email="mdaro22@student.aau.dk">Magnus Darø</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- ASR core packages -->
  <exec_depend>asr_autopilot</exec_depend>
  <exec_depend>asr_perception</exec_depend>
  <exec_depend>asr_sensors</exec_depend>
  <exec_depend>asr_gcs</exec_depend>

  
  <!-- ROS dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
